added a few other changes